2011-01-21 Shlomi Fish <shlomif@iglu.org.il>
	* IO-Socket is doing some imports so we now do use IO::Socket ().
		- Fixed the rest of the imports.
	* Thanks to LeoNerd
	* New Release IO-Socket-INET6-2.7

2011-01-13 Shlomi Fish <shlomif@iglu.org.il>
	* Made the use Socket call import constants selectively, and not rely
	on @EXPORT's whims:
		- http://www.cpantesters.org/cpan/report/d6e547be-19b5-11e0-bbdc-e5c0d6c987b5
	* New Release IO-Socket-INET6-2.66

2010-06-11 Shlomi Fish <shlomif@iglu.org.il>
	* Add a fix for t/io_multihomed6.t to make sure 
	ok 3 will be printed before ok 4. due to many failures in the tests. 
	Such as:
		- http://www.cpantesters.org/cpan/report/07413426-b19f-3f77-b713-d32bba55d77f
	* New Release IO-Socket-INET6-2.65

2010-06-08 Shlomi Fish <shlomif@iglu.org.il>
	* Applied a patch to fix t/io_multihomed6.t on old Perls / old Linux
	distributions:
		- https://rt.cpan.org/Ticket/Display.html?id=58198
		- Thanks to Paul.
	* New Release IO-Socket-INET6-2.64

2010-05-29 Shlomi Fish <shlomif@iglu.org.il>
	* Applied a modified patch to t/io_multihomed6.t to correct the test
	on Fedora 10 and others:
		- https://rt.cpan.org/Public/Bug/Display.html?id=57676
	* New Release IO-Socket-INET6-2.63

2010-05-20 Shlomi Fish <shlomif@iglu.org.il>
	* Solved "problems with multihomed and family order"
		- https://rt.cpan.org/Ticket/Display.html?id=57676
		- Thanks to Steffen Ullrich
	* New Release IO-Socket-INET6-2.62

2010-03-25 Shlomi Fish <shlomif@iglu.org.il>
	* Fix the inet_pton / inet_ntop import warnings:
		- https://rt.cpan.org/Ticket/Display.html?id=55901
		- Thanks to Todd Rinaldo for the patch.
	* Fix listening on :: or 0.0.0.0 - a random address instead of
		the specified would be used. Added test listen_port_only.t
		- Regression from 2.57:
		- https://rt.cpan.org/Ticket/Display.html?id=54656
		- Thanks to Steffen Ullrich for the patch.
	* New Release IO-Socket-INET6-2.60
	* Fixes to t/listen_port_only.t.
	* New Release IO-Socket-INET6-2.61
