@@ -15,3 +15,4 @@ t/io_udp6.t
 t/listen_port_only.t
 t/pod-coverage.t
 t/pod.t
+META.json
